--- a/scripts/bib_files/SQ1/results/filtered_articles_finance.bib
+++ b/scripts/bib_files/SQ1/results/filtered_articles_finance.bib
@@ -1,3 +1,145 @@
+@inproceedings{10.1145/3290621.3290627,
+ abstract = {Cryptocurrencies and their foundation technology, the Blockchain, are reshaping finance and economics, allowing a decentralized approach enabling trusted applications with no trusted counterpart. More recently, the Blockchain and the programs running on it, called Smart Contracts, are also finding more and more applications in all fields requiring trust and sound certifications. Some people have come to the point of saying that the "Blockchain revolution" can be compared to that of the Internet and the Web in their early days. As a result, all the software development revolving around the Blockchain technology is growing at a staggering rate. The feeling of many software engineers about such huge interest in Blockchain technologies is that of unruled and hurried software development, a sort of competition on a first-come-first-served basis which does not assure neither software quality, nor that the basic concepts of software engineering are taken into account.This paper tries to cope with this issue, proposing a software development process to gather the requirement, analyze, design, develop, test and deploy Blockchain applications. The process is based on several Agile practices, such as User Stories and iterative and incremental development based on them. However, it makes also use of more formal notations, such as some UML diagrams describing the design of the system, with additions to represent specific concepts found in Blockchain development. The method is described in good detail, and an example is given to show how it works.},
+ address = {New York, NY, USA},
+ articleno = {3},
+ author = {Marchesi, Michele and Marchesi, Lodovica and Tonelli, Roberto},
+ booktitle = {Proceedings of the 14th Central and Eastern European Software Engineering Conference Russia},
+ doi = {10.1145/3290621.3290627},
+ isbn = {9781450361767},
+ keywords = {dApp design, UML, Smart Contracts, Blockchain-oriented software engineering, Blockchain},
+ location = {Moscow, Russian Federation},
+ numpages = {8},
+ publisher = {Association for Computing Machinery},
+ series = {CEE-SECR '18},
+ title = {An Agile Software Engineering Method to Design Blockchain Applications},
+ url = {https://doi.org/10.1145/3290621.3290627},
+ year = {2018}
+}
+
+@inproceedings{10.1145/3327960.3332384,
+ abstract = {The blockchain is the innovative technology in recent year. It brings a revolution to both industrial and academic area. In fact, it is a distributed storage system based on cryptography and consensus algorithms. Currently, many applications have been implemented in finance, agriculture, payment, and medicine area. We proposed a platform called High-value Commodities as a Service (HCS) to combine blockchain and high-value assets together. Traditionally, real estates, jewelry and artworks are main luxuries word-widely. We provide a sound and reliable environment for those investors to trade. Due to characteristics of the blockchain, users on our platform can track the source for each item. And all private data would be pushed on chains which can avoid some privacy-related problems.},
+ address = {New York, NY, USA},
+ author = {Xu, Zhiyu and Jiao, Tengyun and Wang, Qin and Van, Cuong Bui and Wen, Sheng and Xiang, Yang},
+ booktitle = {Proceedings of the 2019 ACM International Symposium on Blockchain and Secure Critical Infrastructure},
+ doi = {10.1145/3327960.3332384},
+ isbn = {9781450367868},
+ keywords = {trading platform, smart contract, high value commodity, consortium chain, business model, blockchain},
+ location = {Auckland, New Zealand},
+ numpages = {8},
+ pages = {81–88},
+ publisher = {Association for Computing Machinery},
+ series = {BSCI '19},
+ title = {An Efficient Supply Chain Architecture Based on Blockchain for High-value Commodities},
+ url = {https://doi.org/10.1145/3327960.3332384},
+ year = {2019}
+}
+
+@inproceedings{10.1145/3407023.3409199,
+ abstract = {Evidence is a tangible demonstrative artifact that proves a fact and shapes the investigation of various misconduct cases involving for instance corruption, misbehavior, or violation. It is imperative to maintain proper evidence management to guarantee the admissibility of an evidence in a court of law. Chain of custody forms the forensic link of evidence sequence of control, transfer, and analysis to preserve evidence's integrity and to prevent its contamination. Blockchain, a distributed tamper-resistant ledger can be leveraged to offer a decentralized secure digital evidence system. In this paper, we propose a secure chain of custody framework by utilizing the blockchain technology to store evidence metadata while the evidence is stored in a reliable storage medium. The framework is built on top of a private Ethereum blockchain to document every transmission from the moment the evidence is seized, thus ensuring that evidence can only be accessed or possessed by authorized parties. The framework is integrated with the digital evidence system where evidence is physically stored and locked using smart locks. To secure the sequence of evidence submission and retrieval, only an authorized party can possess the key to unlock the evidence. Our proposed framework offers a secure solution that maintains evidence integrity and admissibility among multiple stakeholders such as law enforcement agencies, lawyers, and forensic professionals. The research findings shed light on hidden opportunities for the efficient usage of blockchain in other realms beyond finance and cryptocurrencies.},
+ address = {New York, NY, USA},
+ articleno = {48},
+ author = {Ahmad, Liza and Khanji, Salam and Iqbal, Farkhund and Kamoun, Faouzi},
+ booktitle = {Proceedings of the 15th International Conference on Availability, Reliability and Security},
+ doi = {10.1145/3407023.3409199},
+ isbn = {9781450388337},
+ keywords = {blockchain, chain of custody, digital forensics, distributed ledger, security and privacy},
+ location = {Virtual Event, Ireland},
+ numpages = {8},
+ publisher = {Association for Computing Machinery},
+ series = {ARES '20},
+ title = {Blockchain-based chain of custody: towards real-time tamper-proof evidence management},
+ url = {https://doi.org/10.1145/3407023.3409199},
+ year = {2020}
+}
+
+@inproceedings{10.1145/3474124.3474138,
+ abstract = {Blockchain is undoubtedly one of the most potentially attractive technologies for the organization of financial services. The significance of the Blockchain technology in a banking system can be determined by three main principles that is; Disintermediation, Transparency and Provenance. The DLT (distributed ledger technology) eliminates the need for trust enforcer in the banking management system. This is made possible by the tamper- proof data in the distributed data records and all the participants in the network have the same version of data record with them at all times and it is unalterable. Blockchain promotes a public database record of all the customer transactions and other data, ensuring a transparent and trustworthy system as the customers have a 24x7 real-time access to it. Blockchain keeps an immutable distributed data ledger of transactions and this result in maintaining a lifecycle of the assets and its ownership from its first transaction to the most recent one. It reduces the chances of occurrence of theft, insurance fraud and misselling of the high valued assets or intellectual properties. Blockchain can be implemented in the banking sector for various applications like maintenance of data confidentiality, cheque clearing system, real time money transfer system (digital currency), supply chain finance, insurance, trade finance, KYC (know your customer), cross-border payments/transactions system, monitoring of consortium accounts, auction system and digital asset management. Blockchain technology can hence enable a decentralized solution for the banking ecosystem. The proposed system enables one platform for both the lenders and the borrowers to initiate their money transaction for lending, borrowing and repayment of the loan money. The transactions made throughout, that is, from the start to the last repayment can be viewed easily on a blockchain network thus increasing the transparency and trust of the customers and it resolves any disputes that can arise in the loan system. Along with this, a KYC registry based on blockchain is also proposed which will help in maintaining the KYC details in one platform which can be accessed by various banks for identification and verification of the customer in an easy and faster manner. It will increase the customer satisfaction as there will be no need for the customer to perform a KYC check every time he/she creates a bank account in any bank as the bank can easily access their KYC details from this system.},
+ address = {New York, NY, USA},
+ author = {Ravindran, Urshila and Vamsi, P Raghu},
+ booktitle = {Proceedings of the 2021 Thirteenth International Conference on Contemporary Computing},
+ doi = {10.1145/3474124.3474138},
+ isbn = {9781450389204},
+ location = {Noida, India},
+ numpages = {11},
+ pages = {99–109},
+ publisher = {Association for Computing Machinery},
+ series = {IC3-2021},
+ title = {A Secure Blockchain based Finance Application},
+ url = {https://doi.org/10.1145/3474124.3474138},
+ year = {2021}
+}
+
+@inproceedings{10.1145/3543507.3583393,
+ abstract = {The blockchain-powered decentralized applications and systems have been widely deployed in recent years. The decentralization feature promises users anonymity, security, and non-censorship, which is especially welcomed in the areas of decentralized finance and digital assets. From the perspective of most common users, a decentralized ecosystem means every service follows the principle of decentralization. However, we find that the services in a decentralized ecosystem still may contain centralized components or scenarios, like third-party SDKs and privileged operations, which violate the promise of decentralization and may cause a series of centralized security risks. In this work, we systematically study the centralized security risks existing in decentralized ecosystems. Specifically, we identify seven centralized security risks in the deployment of two typical decentralized services – crypto wallets and DApps, such as anonymity loss and overpowered owner. Also, to measure these risks in the wild, we designed an automated detection tool called Naga and carried out large-scale experiments. Based on the measurement of 28 Ethereum crypto wallets (Android version) and 110,506 on-chain smart contracts, the result shows that the centralized security risks are widespread. Up to 96.4\% of wallets and 83.5\% of contracts exist at least one security risk, including 260 well-known tokens with a total market cap of over $98 billion.},
+ address = {New York, NY, USA},
+ author = {Yan, Kailun and Zhang, Jilian and Liu, Xiangyu and Diao, Wenrui and Guo, Shanqing},
+ booktitle = {Proceedings of the ACM Web Conference 2023},
+ doi = {10.1145/3543507.3583393},
+ isbn = {9781450394161},
+ keywords = {Crypto wallets, Decentralized ecosystems, Smart contracts},
+ location = {Austin, TX, USA},
+ numpages = {10},
+ pages = {2274–2283},
+ publisher = {Association for Computing Machinery},
+ series = {WWW '23},
+ title = {Bad Apples: Understanding the Centralized Security Risks in Decentralized Ecosystems},
+ url = {https://doi.org/10.1145/3543507.3583393},
+ year = {2023}
+}
+
+@inproceedings{10.1145/3544549.3585825,
+ abstract = {Upon its arrival, the Ethereum blockchain promised to introduce a new paradigm of Internet-based applications that would revolutionize multiple fields, from finance to IoT to the public sector. Until now, scientific efforts have been primarily focused on theoretical discussions about the implications of the technology and on technical proposals to improve and consolidate the underlying infrastructure, neglecting the experience of people using blockchain-based systems. However, for this technology to permeate the mainstream, blockchain technology should be easily accessible to the general public. This paper reports on evaluations conducted with first-time blockchain users of two Internet-mediated communities using prototype applications built on Ethereum. Results unveil that even users familiar with technology experienced severe difficulties using blockchain-based apps. Also, we saw how blockchain metaphors and transaction-mediated interactions challenge established mental models for modern applications, imposing heavy workloads on users. We conclude the paper by discussing design implications resulting from blockchain’s paradigm change.},
+ address = {New York, NY, USA},
+ articleno = {55},
+ author = {Saldivar, Jorge and Mart\'{\i}nez-Vicente, Elena and Rozas, David and Valiente, Maria-Cruz and Hassan, Samer},
+ booktitle = {Extended Abstracts of the 2023 CHI Conference on Human Factors in Computing Systems},
+ doi = {10.1145/3544549.3585825},
+ isbn = {9781450394222},
+ keywords = {blockchain, decentralized applications, user experience},
+ location = {Hamburg, Germany},
+ numpages = {8},
+ publisher = {Association for Computing Machinery},
+ series = {CHI EA '23},
+ title = {Blockchain (not) for Everyone: Design Challenges of Blockchain-based Applications},
+ url = {https://doi.org/10.1145/3544549.3585825},
+ year = {2023}
+}
+
+@inproceedings{10.1145/3565383.3566112,
+ abstract = {Decentralised Autonomous Organisations (DAOs) have the capability of being a disruptive Web3 technology. Their usage of cryptographically secure distributed ledgers shows promise of replacing existing technical and financial intermediaries. However, this promise has not been fully materialised yet: existing attempts typically rely on centralisation as the required decentralised components do not exist or are not mature enough. We present our Web3 Deployment Experiment around a robust decentralised economy to address these issues. Our economy is unique due to the removal of all centralised components and governance. It is resilient against legal and economic attacks as no individual or organisation can compromise its functioning. We dub this characteristic extreme decentralisation. Similar to BitTorrent and Bitcoin, our extreme decentralisation DAOs carefully avoid single points of failure and are effectively unstoppable. Within our experiment around a music economy, we bypass all intermediaries in finance, technology, and the music industry itself with a direct donation to musicians. We demonstrate the viability of collective decision-making within our decentralised economy and present a set of principles for Web3 DAOs. Our implementation shows that the DAO ecosystem is fully deployable on smartphones, allowing anyone to create a DAO without reliance on central authorities or components.},
+ address = {New York, NY, USA},
+ author = {Chotkan, Rowdy and Decouchant, J\'{e}r\'{e}mie and Pouwelse, Johan},
+ booktitle = {Proceedings of the 3rd International Workshop on Distributed Infrastructure for the Common Good},
+ doi = {10.1145/3565383.3566112},
+ isbn = {9781450399289},
+ keywords = {web3, trustless infrastructure, decentralised economy, decentralised autonomous organisation},
+ location = {Quebec, Quebec City, Canada},
+ numpages = {6},
+ pages = {37–42},
+ publisher = {Association for Computing Machinery},
+ series = {DICG '22},
+ title = {Unstoppable DAOs for web3 disruption},
+ url = {https://doi.org/10.1145/3565383.3566112},
+ year = {2022}
+}
+
+@inproceedings{10.1145/3568562.3568650,
+ abstract = {Decentralized Finance (DeFi) – an ecosystem of financial applications built on top of blockchain technology – has kept powering ahead and attracted a large amount of capital in just a few years. As the core part of the DeFi ecosystem, decentralized lending protocols allow users to become lenders or borrowers in a completely decentralized fashion, such that an individual has complete control over their funds at all times. Collecting, analyzing, and visualizing lending data are crucial as these lending protocols are growing steadily. This paper presents an analysis model for decentralized lending protocols. Our main contributions are as follows. (i) We analyze and compare the top lending protocols; (ii) We present a general model to collect and process a large amount of data from multiple lending protocols in an exact and efficient manner; (iii) We design and implement a lending visualization system with various charts divided into three categories, i.e., lending market overview, token analysis, and user analysis.},
+ address = {New York, NY, USA},
+ author = {Pham, Viet-Bang and Trinh, Tuan-Dat},
+ booktitle = {Proceedings of the 11th International Symposium on Information and Communication Technology},
+ doi = {10.1145/3568562.3568650},
+ isbn = {9781450397254},
+ location = {Hanoi, Vietnam},
+ numpages = {8},
+ pages = {405–412},
+ publisher = {Association for Computing Machinery},
+ series = {SoICT '22},
+ title = {Analysis Model for Decentralized Lending Protocols},
+ url = {https://doi.org/10.1145/3568562.3568650},
+ year = {2022}
+}
+
 @inproceedings{10223536,
  abstract = {In recent years, permissionless blockchains have gained significant attention for their ability to secure and provide transparency in transactions. The development of blockchain technology has shifted from cryptocurrency to decentralized finance, benefiting millions of unbanked individuals, and serving as the foundation of Web3, which aims to provide the next generation of the internet with data ownership for users. The rise of NFTs has also helped artists and creative workers to protect their intellectual property and reap the benefits of their work. However, privacy risks associated with permissionless blockchains have become a major concern for individuals and institutions. The role of blockchain in the transition from Web2 to Web3 is crucial, as it is rapidly evolving. As more individuals, institutions, and organizations adopt this technology, it becomes increasingly important to closely monitor the new risks associated with permissionless blockchains and provide updated solutions to mitigate them. This paper endeavors to examine the privacy risks inherent in permissionless blockchains, including Remote Procedure Call (RPC) issues, Ethereum Name Service (ENS), miner extractable value (MEV) bots, on-chain data analysis, data breaches, transaction linking, transaction metadata, and others. The existing solutions to these privacy risks, such as zero-knowledge proofs, ring signatures, Hyperledger Fabric, and stealth addresses, shall be analyzed. Finally, suggestions for the future improvement of privacy solutions in the permissionless blockchain space shall be put forward.},
  author = {Bayan, Talgar and Banach, Richard},
@@ -88,6 +230,49 @@
  year = {2022}
 }
 
+@article{JONES2024104644,
+ abstract = {Abstract:
+Anticipatory action (AA) refers to a series of interventions executed when a hazard presents imminent danger, as indicated by forecasts, early warnings, or pre-disaster risk analyses. It involves proactive measures undertaken by individuals or organizations before an expected disaster to lessen its impact on people, assets, and infrastructure likely to be affected. An increasing array of inter-governmental bodies, governments, United Nations entities, global non-governmental organizations, and Red Cross and Red Crescent movements, have been delving into and utilizing anticipatory action. It has been heralded globally by governments, donors and organizations alike as being a more protective, practical, and cost-effective method of disaster risk management. However, ongoing pilots by the Food and Agriculture Organization of the United Nations (FAO) and partners have exposed a significant level of friction between the capacity and speed of existing systems and stakeholders to execute these processes in a manner that is synchronized and timely enough to have the intended impact. This research investigates the potential of blockchain technology to streamline AA programs. It analyzes existing academic and non-academic sources (scholarly and gray literature) to develop a framework for identifying which blockchain applications can be most beneficial. By viewing smart contracts, data oracles, and decentralized finance (DeFi) as a toolbox, the framework examines how these technologies can be used to digitize and simplify AA processes. For AA practitioners, this approach offers a practical solution to potentially increase efficiency and speed within existing program structures. Additionally, it may have the secondary benefit of simplifying cash transfer delivery. Ultimately, this piece seeks to be more thought-provoking than prescriptive; as both areas of work (AA and blockchain technology) are continuously evolving, hopefully new cross-sectoral collaborations can ensue and provide more granular insights on what AA and blockchain synergies look like in practice.},
+ author = {Catherine Jones and Sandra {Uwantege Hart} and Beatriz Carvalho},
+ doi = {https://doi.org/10.1016/j.ijdrr.2024.104644},
+ issn = {2212-4209},
+ journal = {International Journal of Disaster Risk Reduction},
+ keywords = {disaster risk management, anticipatory action, blockchain, predictive analytics, cash and voucher programmes, united nations},
+ pages = {104644},
+ title = {Anticipate, Automate, Accelerate: A Framework for Blockchain in Anticipatory Action},
+ url = {https://www.sciencedirect.com/science/article/pii/S2212420924004060},
+ year = {2024}
+}
+
+@article{PANDEY2022101954,
+ abstract = {Increase in global population growth and the consequent rise in the demand for food while ensuring quality, preventing wastage, avoiding deforestation, and carbon footprinting has put tremendous pressure on the global food supply chain (FSC). Due to fast computing facilities and availability of data, blockchain technology has emerged as a potential system that may help in developing a safe and secure FSC. Blockchain has gained significant attention among researchers worldwide, which is evident from the extensive literature generated on this subject within a span of a few years. Through this paper, the authors attempt to showcase the immense scope and significance of blockchain in FSCs by examining and analyzing the existing studies. In addition to providing an overview of the application of blockchain in FSCs, this study also discusses challenges such as scalability, interoperability, and high cost and suggests potential solutions for the existing difficulties in adopting blockchain in FSCs. Additionally, a bibliometric analysis is provided to acquaint researchers and practitioners with the structure and research trends in this area. The study found that researchers have mostly focused on the applicability of blockchain for product authentication, finance, and logistics. Further, blockchain is likely to become a dominant technology for enhancing transparency and traceability, reducing risk and, most importantly, enhancing trust among different stakeholders in the area of FSC.},
+ author = {Vivekanand Pandey and Millie Pant and Vaclav Snasel},
+ doi = {https://doi.org/10.1016/j.techsoc.2022.101954},
+ issn = {0160-791X},
+ journal = {Technology in Society},
+ keywords = {Blockchain technology, Food supply chain, Traceability, Transparency, Food integrity, Food safety, Smart farming},
+ pages = {101954},
+ title = {Blockchain technology in food supply chains: Review and bibliometric analysis},
+ url = {https://www.sciencedirect.com/science/article/pii/S0160791X22000951},
+ volume = {69},
+ year = {2022}
+}
+
+@article{PARK2023529,
+ abstract = {This article introduces the next major generational evolution of the web: Web3. We review the fundamental evolution of the internet and the web over the past 3 decades, including a brief presentation of the publications in Business Horizons that are important in a discussion of the emergence of Web3. We then discuss what these recent developments mean to organizations, consumers, and the public. Though the degree to which Web3 will be widely adopted is uncertain, these technologies are already creating both exhilarating and terrifying implications for e-commerce, digital media, online social networking, online marketplaces, search engines, supply chain management, and finance, among others. We propose the consideration and management of technical, organizational, and regulatory interoperability for Web3 to deliver on its promises of value and that failure to consider these interoperability components may destroy economic value, consumer confidence, or social issues online. We also call on our fellow researchers to focus on these interoperability issues and how they might impact the positive and negative sides of Web3 technologies to help us understand and shape our Web3 future.},
+ author = {Andrew Park and Matthew Wilson and Karen Robson and Dionysios Demetis and Jan Kietzmann},
+ doi = {https://doi.org/10.1016/j.bushor.2022.10.005},
+ issn = {0007-6813},
+ journal = {Business Horizons},
+ keywords = {Web3, Blockchain technology, Metaverse, DeFi, Cryptocurrencies},
+ number = {4},
+ pages = {529-541},
+ title = {Interoperability: Our exciting and terrifying Web3 future},
+ url = {https://www.sciencedirect.com/science/article/pii/S0007681322001318},
+ volume = {66},
+ year = {2023}
+}
+
 @article{PINEIROCHOUSA2023113673,
  abstract = {In our study, we have evaluated the impact of tweets, social indicators, uncertainty, and attention indices on the selected variables calculated from a pool of 51 decentralised finance entities. In so doing, we have identified some evidence that returns are impacted by tweets, but not by social indicators that appear to be more relevant for volatility. We have further confirmed that the S&P500 Index negatively influences cryptocurrency returns, which means that these two asset classes are substitutes. Uncertainty and attention indices are relevant in determining returns and the alternative measurement of volatility. However, they remain insignificant for illiquidity and our initial volatility choice.},
  author = {Juan Piñeiro-Chousa and Aleksandar Šević and Isaac González-López},
@@ -99,6 +284,20 @@
  title = {Impact of social metrics in decentralized finance},
  url = {https://www.sciencedirect.com/science/article/pii/S0148296323000310},
  volume = {158},
+ year = {2023}
+}
+
+@article{PROELSS2023102916,
+ abstract = {GameFi is a portmanteau of “game” and “finance.” The concept involves blockchain games that offer economic incentives to play, otherwise known as play-to-earn (P2E) games. We explain in detail how GameFi differs from traditional games, and carve out its unique value proposition. We also explore how the mechanics of blockchain games influence the social facet of P2E games, where guilds and clans essentially function as profit-sharing organizations. GameFi leverages disparate elements of the crypto space: tokens, DeFi, and NFTs. Lastly, we discuss in detail some of the challenges of GameFi.},
+ author = {Juliane Proelss and Stéphane Sévigny and Denis Schweizer},
+ doi = {https://doi.org/10.1016/j.irfa.2023.102916},
+ issn = {1057-5219},
+ journal = {International Review of Financial Analysis},
+ keywords = {Blockchain, Cryptocurrency, DAO, DeFi, Gamification, GameFi, Metaverse, NFT, Play-to-earn (P2E), Web3},
+ pages = {102916},
+ title = {GameFi: The perfect symbiosis of blockchain, tokens, DeFi, and NFTs?},
+ url = {https://www.sciencedirect.com/science/article/pii/S1057521923004325},
+ volume = {90},
  year = {2023}
 }
 
@@ -114,4 +313,18 @@
  url = {https://www.sciencedirect.com/science/article/pii/S2667345223000305},
  volume = {3},
  year = {2023}
+}
+
+@article{SATAMRAJU2021146,
+ abstract = {Internet of Things (IoT) applications have gained a huge momentum and have spanned across all domains adding innovations to the prevailing solutions. The IoT networks generate enormous data comprising meteorological information, patient critical body parameters, finance, logistics, location of a tracking object, etc. Security for sensitive data,such as patient body critical parameters from an attached monitoring device, streaming over IoT networks is vital and is a need of the hour. Data integrity and user (or device) authentication are crucial for building a trust-worthy communication network among the peers in IoT networks. Most networks still employ specific software encryption algorithms that provide considerable data security. But quantum computing has proved the vulnerability of computationally vigorous cryptographic algorithms. A decentralized and scalable framework for device authentication and data security is proposed in this paper based on blockchain platform and Physical Unclonable Functions (PUFs). An authentication protocol is developed using PUF-based cryptographic primitives. The PUF-based keys are hard to replicate and almost impossible to predict because of the randomness in the physical design and complex mathematical modeling of the system. Lightweight Smart contracts are used to facilitate role-based access control. Data privacy is preserved by storing the sensitive data off-chain. As a proof of concept, an IoT-based healthcare system based on Ethereum permissioned blockchain is developed using the proposed framework. The​ designed PUF exhibits 48.46% uniqueness and 2.38% reliability. A comparative analysis with existing similar models shows that the proposed approach is feasible and provides a scalable solution for device authentication and data security in resource-limited medical IoT networks.},
+ author = {Krishna Prasad Satamraju and B. Malarkodi},
+ doi = {https://doi.org/10.1016/j.comcom.2021.09.012},
+ issn = {0140-3664},
+ journal = {Computer Communications},
+ keywords = {Blockchain, Decentralization, Internet of Things, Physical unclonable functions, Security, Trust-worthy},
+ pages = {146-160},
+ title = {A decentralized framework for device authentication and data security in the next generation internet of medical things},
+ url = {https://www.sciencedirect.com/science/article/pii/S0140366421003492},
+ volume = {180},
+ year = {2021}
 }
